# R-MPPI_F1tenth1

./: .env  .gitignore  CMakeLists.txt  build_config_snapshot.txt
bridge/: gym_client.py  mppi_server.py
core/: lidar.py
maps/: donut_track.yaml  donut_track_largeO_blocks.yaml
python/: CMakeLists.txt
python/bindings/: rmppi_cuda.cpp  rmppi_cuda.cu
scripts/: generate_donut_map_v3.py  run_gymwrap.py
tools/: patch_rmppi_cuda_v2.sh
viz/: render.py
